--- a/src/app/core/components/auth/registration/registration.component.html
+++ b/src/app/core/components/auth/registration/registration.component.html
@@ -3,66 +3,40 @@
     <h1>Registration</h1>
     <br />
     <div class="group">
-      <input
-        type="text"
-        placeholder="First Name"
-        name="firstName"
-        formControlName="firstName"
-        [ngClass]="{'invalid' : registrationForm.controls.firstName.errors?.['pattern']}"
-      />
+      <input type="text" placeholder="First Name" name="firstName" formControlName="firstName"
+        [ngClass]="{'invalid' : registrationForm.controls.firstName.errors?.['pattern']}" />
       <p *ngIf="registrationForm.controls.firstName.errors?.['pattern']">
         First name is required and first letter must bi capital
       </p>
     </div>
     <br />
     <div class="group">
-      <input
-        type="text"
-        placeholder="Last Name"
-        name="lastName"
-        formControlName="lastName"
-        [ngClass]="{'invalid' : registrationForm.controls.lastName.errors?.['pattern']}"
-      />
+      <input type="text" placeholder="Last Name" name="lastName" formControlName="lastName"
+        [ngClass]="{'invalid' : registrationForm.controls.lastName.errors?.['pattern']}" />
       <p *ngIf="registrationForm.controls.lastName.errors?.['pattern']">
         Last name is required and first letter must bi capital
       </p>
     </div>
     <br />
     <div class="group">
-      <input
-        type="email"
-        placeholder="Email"
-        name="email"
-        formControlName="email"
-        [ngClass]="{'invalid' : registrationForm.controls.email.errors?.['email']}"
-      />
+      <input type="email" placeholder="Email" name="email" formControlName="email"
+        [ngClass]="{'invalid' : registrationForm.controls.email.errors?.['email']}" />
       <p *ngIf="registrationForm.controls.email.errors?.['email']">
         Email should be in right form
       </p>
     </div>
     <br />
     <div class="group">
-      <input
-        type="password"
-        placeholder="Password"
-        name="password"
-        formControlName="password"
-        [ngClass]="{'invalid' : registrationForm.controls.password.errors?.['pattern']}"
-      />
+      <input type="password" placeholder="Password" name="password" formControlName="password"
+        [ngClass]="{'invalid' : registrationForm.controls.password.errors?.['pattern']}" />
       <p *ngIf="registrationForm.controls.password.errors?.['pattern']">
         Password should not contain space
       </p>
     </div>
     <br />
     <div class="group">
-      <input
-        #conPass
-        type="password"
-        placeholder="Confirm Password"
-        name="confirmPassword"
-        formControlName="confirmPassword"
-        [ngClass]="{ invalid: arePasswordsEqual && conPass.value }"
-      />
+      <input #conPass type="password" placeholder="Confirm Password" name="confirmPassword"
+        formControlName="confirmPassword" [ngClass]="{ invalid: arePasswordsEqual && conPass.value }" />
       <p *ngIf="arePasswordsEqual && conPass.value">Passwords are not equal!</p>
     </div>
     <br />
@@ -72,13 +46,8 @@
     </p>
     <br />
 
-    <button
-      type="submit
-    "
-      [disabled]="registrationForm.invalid"
-      [routerLink]="['/login']"
-      (click)="onRegister()"
-    >
+    <button type="submit
+    " [disabled]="registrationForm.invalid" [routerLink]="['/login']" (click)="onRegister()">
       Register
     </button>
   </div>
