--- a/src/app/core/components/auth/registration/registration.component.scss
+++ b/src/app/core/components/auth/registration/registration.component.scss
@@ -12,8 +12,8 @@
   input {
     width: 100%;
     height: 50px;
-    background-color: $blue-color;
-    color: $blue-color-input-text;
+    background-color: #a1d3f5;
+    color: #000000;
     border: none;
     border-radius: 5px;
     font-size: 20px;
@@ -27,34 +27,34 @@
   h1 {
     text-align: left;
     font-size: 60px;
-    color: $blue-color;
+    color: #a1d3f5;
   }
 
   button {
     width: 100%;
     height: 50px;
-    background-color: $blue-color;
-    color: $blue-color-input-text;
+    background-color: #a1d3f5;
+    color: #000000;
     border: none;
     border-radius: 5px;
     font-size: 20px;
 
     &:hover {
-      background-color: $blue-light-color;
+      background-color: #a1d3f5;
       color: $blue-color;
       cursor: pointer;
     }
 
     &:disabled {
       cursor: not-allowed;
-      background-color: $blue-light-color;
+      background-color: #a1d3f5;
       color: $blue-color;
     }
   }
 
   .log-in-class {
     background-color: transparent;
-    color: $blue-color;
+    color: #a1d3f5;
 
     &:hover {
       color: $blue-color-hover;
@@ -62,6 +62,6 @@
   }
 
   p {
-    color: $blue-color;
+    color: #a1d3f5;
   }
 }
