--- a/src/app/features/event/components/table-of-events/table-of-events.component.html
+++ b/src/app/features/event/components/table-of-events/table-of-events.component.html
@@ -14,9 +14,9 @@
     <td mat-cell *matCellDef="let element">{{ element.title }}</td>
   </ng-container>
 
-  <ng-container matColumnDef="location">
-    <th mat-header-cell *matHeaderCellDef><b>Location</b></th>
-    <td mat-cell *matCellDef="let element">{{ element.location }}</td>
+  <ng-container matColumnDef="organizator">
+    <th mat-header-cell *matHeaderCellDef><b>Organizator</b></th>
+    <td mat-cell *matCellDef="let element">{{ element.organizatorFirstName + ' ' + element.organizatorLastName}}</td>
   </ng-container>
 
   <ng-container matColumnDef="date">
@@ -26,21 +26,21 @@
 
   <ng-container matColumnDef="currentCreation">
     <th mat-header-cell *matHeaderCellDef><b>Date Created</b></th>
-    <td mat-cell *matCellDef="let element">{{ element.currentCreation }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.conferenceDate }}</td>
   </ng-container>
 
-  <ng-container matColumnDef="edit" >
-    <th mat-header-cell *matHeaderCellDef ><b>Edit</b></th>
+  <ng-container matColumnDef="edit">
+    <th mat-header-cell *matHeaderCellDef><b>Edit</b></th>
     <td mat-cell *matCellDef="let element">
-      <button mat-button *ngIf="isAdmin" (click)="onCreateReservation(element)" class='material-icons' >edit
+      <button mat-button *ngIf="isAdmin" (click)="onCreateEvent(element)" class='material-icons'>edit
       </button>
     </td>
   </ng-container>
 
   <ng-container matColumnDef="delete">
-    <th mat-header-cell *matHeaderCellDef><b>Delete reservation</b></th>
+    <th mat-header-cell *matHeaderCellDef><b>Delete</b></th>
     <td mat-cell *matCellDef="let element">
-      <button mat-button *ngIf="isAdmin" (click)="onDelete(element)"class='material-icons' >delete
+      <button mat-button *ngIf="isAdmin" (click)="onDelete(element)" class='material-icons'>delete
       </button>
     </td>
   </ng-container>
