--- a/src/app/features/events/components/event-overview/event-overview.component.html
+++ b/src/app/features/events/components/event-overview/event-overview.component.html
@@ -1,10 +1,10 @@
 <div class="wrapper-overview" *ngIf="event; else elseBlock">
   <div class="main-content">
-    <h1>{{ event?.title }}</h1>
     <img [src]="event?.imageUrl" [alt]="event?.title" />
   </div>
 
   <div class="container">
+    <h1>{{ event?.title }}</h1>
     <br />
     <h1>{{ event?.date }}</h1>
     <p>
@@ -17,5 +17,4 @@
   </div>
 </div>
 <ng-template #elseBlock>
-  <app-not-found text="ERROR, Event DOES NOT EXIST"></app-not-found
-></ng-template>
+  <app-not-found text="ERROR, Event DOES NOT EXIST"></app-not-found></ng-template>
