--- a/src/app/features/events/components/event-overview/event-overview.component.scss
+++ b/src/app/features/events/components/event-overview/event-overview.component.scss
@@ -5,6 +5,7 @@
   grid-gap: 5px;
   width: 60%;
   margin: auto;
+  margin-top: 58px;
 }
 
 .main-content {
@@ -25,6 +26,7 @@
 .container {
   padding: 20px;
   margin: 20px;
+  color: white;
 }
 
 button {
