--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,8 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-image: url(../src/assets/images/background.jpg);
+  background-image: url(../src/assets/images/bck6.jpg);
+  background-size: cover;
 }
 
 .active {
