--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,8 +8,7 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-image: url(../src/assets/images/bck6.jpg);
-  background-size: cover;
+  background-image: url(../src/assets/images/background.jpg);
 }
 
 .active {
