--- a/src/app/features/event/components/table-of-events/table-of-events.component.html
+++ b/src/app/features/event/components/table-of-events/table-of-events.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" *ngIf="isAdmin">
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   <ng-container matColumnDef="dots">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let element">⋮</td>
@@ -40,7 +40,7 @@
   <ng-container matColumnDef="delete">
     <th mat-header-cell *matHeaderCellDef><b>Delete</b></th>
     <td mat-cell *matCellDef="let element">
-      <button mat-button *ngIf="isAdmin" (click)="onDelete(element)" class='material-icons'>delete
+      <button mat-button (click)="onDelete(element)" class='material-icons'>delete
       </button>
     </td>
   </ng-container>
